# noemoji

./: .gitignore  .markdownlint.yaml  Cargo.toml  PLAN.md  README.md  check.sh
.devcontainer/: Dockerfile  devcontainer.json  post-create-command.sh
.github/workflows/: ci.yml
src/: check.rs  cli.rs  config.rs  lib.rs  logging.rs  main.rs
tests/: cli.rs  config_discovery.rs  config_merging.rs  logging.rs  stdin.rs  toml_parsing.rs
