[package]
name = "noemoji"
version = "0.1.0"
authors = ["Mark Friedenbach <mark@friedenbach.org>"]
description = "Unicode compliance linter that removes obvious AI authorship signatures"
repository = "https://github.com/atomCAD/noemoji"
license = "MPL-2.0"
edition = "2024"

[dependencies]
env_logger = "0.11"
lexopt = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
